@@ -51,6 +51,7 @@ struct s_charset_list charset_list[]={
     {"QL",char_set_ql},
     {"RetroMac",char_set_retromac},
     {"Sam Coupe",char_set_sam},
+    {"TempleOS",char_set_templeos},
     {"Z88",char_set_z88},
     {"ZX Spectrum",char_set_spectrum},
     {"CustomFile",char_set_customfile},
@@ -3540,6 +3541,240 @@ unsigned char char_set_dos[TOTAL_ASCII_CHARSET_ELEMENTS]={
 
 //Á A mayúscula acento cerrado - 168
 0x04,0x08,0x30,0x78,0xcc,0xfc,0xcc,0x00,
+};
+
+//Basado en Z88 con variaciones
+unsigned char char_set_templeos[TOTAL_ASCII_CHARSET_ELEMENTS]={
+
+0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //32
+0x0c,0x0c,0x0c,0x0c,0x00,0x00,0x0c,0x00,
+0x1b,0x1b,0x1b,0x00,0x00,0x00,0x00,0x00,
+0x0a,0x1f,0x1f,0x0a,0x1f,0x1f,0x0a,0x00,
+0x0c,0x1f,0x2c,0x1e,0x0d,0x3e,0x0c,0x00,
+0x30,0x33,0x06,0x0c,0x18,0x33,0x03,0x00,
+0x1c,0x36,0x36,0x18,0x35,0x32,0x1d,0x00,
+0x06,0x0c,0x18,0x00,0x00,0x00,0x00,0x00,
+0x06,0x0c,0x18,0x18,0x18,0x0c,0x06,0x00,
+0x18,0x0c,0x06,0x06,0x06,0x0c,0x18,0x00,
+0x00,0x0c,0x3f,0x1e,0x3f,0x0c,0x00,0x00,  //42
+0x00,0x0c,0x0c,0x3f,0x3f,0x0c,0x0c,0x00,
+0x00,0x00,0x00,0x00,0x00,0x0c,0x0c,0x18,
+0x00,0x00,0x00,0x1f,0x1f,0x00,0x00,0x00,
+0x00,0x00,0x00,0x00,0x00,0x0c,0x0c,0x00,
+0x00,0x03,0x06,0x0c,0x18,0x30,0x00,0x00,
+0x0e,0x19,0x1b,0x1d,0x19,0x19,0x0e,0x00,
+0x0c,0x1c,0x0c,0x0c,0x0c,0x0c,0x3f,0x00,
+0x0e,0x1b,0x03,0x06,0x0c,0x18,0x1f,0x00,
+0x1f,0x03,0x06,0x03,0x03,0x1b,0x0e,0x00,
+0x06,0x0e,0x16,0x26,0x3f,0x06,0x06,0x00,  //52
+0x1f,0x18,0x1e,0x03,0x03,0x1b,0x0e,0x00,
+0x06,0x0c,0x18,0x1e,0x1b,0x1b,0x0e,0x00,
+0x1f,0x03,0x03,0x06,0x0c,0x0c,0x0c,0x00,
+0x0e,0x1b,0x1b,0x0e,0x1b,0x1b,0x0e,0x00,
+0x0e,0x1b,0x1b,0x0f,0x03,0x06,0x0c,0x00,
+0x00,0x00,0x0c,0x0c,0x00,0x0c,0x0c,0x00,
+0x00,0x00,0x0c,0x0c,0x00,0x0c,0x0c,0x18,
+0x03,0x06,0x0c,0x18,0x0c,0x06,0x03,0x00,
+0x00,0x1f,0x1f,0x00,0x1f,0x1f,0x00,0x00,
+0x18,0x0c,0x06,0x03,0x06,0x0c,0x18,0x00,  //62
+0x0e,0x1b,0x03,0x06,0x06,0x00,0x06,0x00,
+0x1e,0x33,0x37,0x35,0x37,0x30,0x1e,0x00,
+0x0e,0x1b,0x1b,0x1f,0x1b,0x1b,0x1b,0x00,
+0x1e,0x1b,0x1b,0x1e,0x1b,0x1b,0x1e,0x00,
+0x0e,0x1b,0x18,0x18,0x18,0x1b,0x0e,0x00,
+0x1c,0x1a,0x1b,0x1b,0x1b,0x1a,0x1c,0x00,
+0x1f,0x18,0x18,0x1e,0x18,0x18,0x1f,0x00,
+0x1f,0x18,0x18,0x1e,0x18,0x18,0x18,0x00,
+0x0e,0x19,0x18,0x1b,0x19,0x19,0x0e,0x00,
+0x19,0x19,0x19,0x1f,0x19,0x19,0x19,0x00,  //72
+0x0f,0x06,0x06,0x06,0x06,0x06,0x0f,0x00,
+0x1f,0x06,0x06,0x06,0x06,0x16,0x0c,0x00,
+0x19,0x1a,0x1c,0x1c,0x1c,0x1a,0x19,0x00,
+0x18,0x18,0x18,0x18,0x18,0x18,0x1f,0x00,
+0x11,0x1b,0x1f,0x1f,0x15,0x15,0x11,0x00,
+0x11,0x19,0x1d,0x1f,0x1b,0x19,0x19,0x00,
+0x0e,0x1b,0x1b,0x1b,0x1b,0x1b,0x0e,0x00,
+0x1e,0x1b,0x1b,0x1e,0x18,0x18,0x18,0x00,
+0x0e,0x19,0x19,0x19,0x1d,0x1a,0x0d,0x00,
+0x1e,0x1b,0x1b,0x1e,0x1c,0x1a,0x19,0x00,  //82
+0x0e,0x1b,0x18,0x0e,0x03,0x1b,0x0e,0x00,
+0x3f,0x0c,0x0c,0x0c,0x0c,0x0c,0x0c,0x00,
+0x1b,0x1b,0x1b,0x1b,0x1b,0x1b,0x0e,0x00,
+0x1b,0x1b,0x1b,0x1b,0x1b,0x0a,0x04,0x00,
+0x11,0x11,0x15,0x15,0x1f,0x1f,0x0a,0x00,
+0x1b,0x1b,0x0a,0x04,0x0a,0x1b,0x1b,0x00,
+0x1b,0x1b,0x1b,0x0a,0x04,0x04,0x04,0x00,
+0x1f,0x03,0x06,0x0c,0x18,0x18,0x1f,0x00,
+0x1e,0x18,0x18,0x18,0x18,0x18,0x1e,0x00,
+0x00,0x30,0x18,0x0c,0x06,0x03,0x00,0x00,  //92
+0x1e,0x06,0x06,0x06,0x06,0x06,0x1e,0x00,
+0x0c,0x1e,0x33,0x00,0x00,0x00,0x00,0x00,
+0x00,0x00,0x00,0x00,0x00,0x3f,0x3f,0x00,
+0x18,0x0c,0x06,0x00,0x00,0x00,0x00,0x00,
+0x00,0x00,0x0e,0x03,0x0f,0x1b,0x0f,0x00,
+0x18,0x18,0x1e,0x1b,0x1b,0x1b,0x1e,0x00,
+0x00,0x00,0x0e,0x18,0x18,0x18,0x0e,0x00,
+0x03,0x03,0x0f,0x1b,0x1b,0x1b,0x0f,0x00,
+0x00,0x00,0x0e,0x1b,0x1f,0x18,0x0e,0x00,
+0x06,0x0d,0x0c,0x1e,0x0c,0x0c,0x0c,0x00,  //102
+0x00,0x00,0x0e,0x1b,0x1b,0x0f,0x03,0x0e,
+0x18,0x18,0x1e,0x1b,0x1b,0x1b,0x1b,0x00,
+0x06,0x00,0x0e,0x06,0x06,0x06,0x0f,0x00,
+0x06,0x00,0x0e,0x06,0x06,0x06,0x06,0x1c,
+0x18,0x18,0x1b,0x1e,0x1e,0x1b,0x19,0x00,
+0x1c,0x0c,0x0c,0x0c,0x0c,0x0c,0x1e,0x00,
+0x00,0x00,0x0a,0x1f,0x1f,0x15,0x15,0x00,
+0x00,0x00,0x1e,0x1b,0x1b,0x1b,0x1b,0x00,
+0x00,0x00,0x0e,0x1b,0x1b,0x1b,0x0e,0x00,
+0x00,0x00,0x1e,0x1b,0x1b,0x1e,0x18,0x18,  //112
+0x00,0x00,0x1e,0x36,0x36,0x1e,0x06,0x07,
+0x00,0x00,0x1b,0x1c,0x18,0x18,0x18,0x00,
+0x00,0x00,0x0f,0x18,0x0e,0x03,0x1e,0x00,
+0x00,0x0c,0x1f,0x0c,0x0c,0x0d,0x06,0x00,
+0x00,0x00,0x1b,0x1b,0x1b,0x1b,0x0f,0x00,
+0x00,0x00,0x1b,0x1b,0x1b,0x0a,0x04,0x00,
+0x00,0x00,0x15,0x15,0x1f,0x1f,0x0a,0x00,
+0x00,0x00,0x1b,0x0a,0x04,0x0a,0x1b,0x00,
+0x00,0x00,0x1b,0x1b,0x1b,0x0f,0x03,0x0e,
+0x00,0x00,0x1f,0x06,0x0c,0x18,0x1f,0x00,  //122
+0x06,0x0c,0x0c,0x18,0x0c,0x0c,0x06,0x00,
+0x0c,0x0c,0x0c,0x00,0x0c,0x0c,0x0c,0x00,
+0x18,0x0c,0x0c,0x06,0x0c,0x0c,0x18,0x00,
+0x00,0x18,0x2d,0x06,0x00,0x00,0x00,0x00,
+0x0e,0x19,0x3c,0x18,0x3c,0x19,0x0e,0x00
+
+
+//caracter adicional para menu - franja de color de spectrum
+
+        ,       1
+        ,       3
+        ,       7
+        ,       15
+        ,       31
+        ,       63
+        ,       127
+        ,       255
+
+//caracter adicional para menu - enye minuscula
+,0x1E,0x00,0x1e,0x1b,0x1b,0x1b,0x1b,0x00
+
+
+//CYRILLIC SMALL LETTER I и
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x00,0x3c,0x44,0x3c,0x24,0x44,0x00,
+
+//Letra minuscula r con anzuelo ɾ - 137
+0x00,0x00,0x18,0x24,0x20,0x20,0x20,0x00,
+
+//Greek Small Letter Theta θ - 138
+0x3c,0x42,0x42,0x7e,0x42,0x42,0x3c,0x00,
+
+//Caracter boton cierre BeOS - 139
+0,62,34,34,34,62,0,0,
+
+//Caracter boton cierre Turbovision - 140
+0,63,63,63,63,63,63,0,
+
+//Caracter logo apple - 141
+0x08,0x10,0x78,0xFC,0xF8,0xFC,0x78,0x00,
+
+//á a acentuada - 142
+0x02,0x04,0x0e,0x03,0x0f,0x1b,0x0f,0x00,
+
+//é e acentuada - 143
+0x02,0x04,0x0e,0x1b,0x1f,0x18,0x0e,0x00,
+
+//í i acentuada - 144
+0x02,0x04,0x00,0x0e,0x06,0x06,0x0f,0x00,
+
+//ó o acentuada - 145
+0x02,0x04,0x0e,0x1b,0x1b,0x1b,0x0e,0x00,
+
+//ú u acentuada - 146
+0x02,0x04,0x1b,0x1b,0x1b,0x1b,0x0f,0x00,
+
+//Ñ enye mayuscula - 147
+//0x7C,0x00,0x44,0x64,0x54,0x4C,0x44,0x00,
+//0x1f,0x00,0x11,0x19,0x1d,0x1f,0x1b,0x00,
+0x1f,0x00,0x19,0x1d,0x1f,0x1b,0x19,0x00,
+//0x11,0x19,0x1d,0x1f,0x1b,0x19,0x19,0x00,
+
+//Caracter fondo titulo TempleOS - 148
+0,0,255,0,255,0,0,0,
+
+//Caracter background titulo - 149. Este 149 se uso por primera vez en AmigaOS
+0,255,145,163,197,137,255,0,
+
+//Caracter minimizar - 150
+255,129,129,255,129,129,255,0,
+
+//Caracter restaurar - 151
+255,129,255,129,255,129,255,0,
+
+//Caracter maximizar - 152
+0,126,2+64,2+64,2+64,2+64,126,0,
+
+//Caracter franjas verticales colores titulo - 153
+2+4+32+64,2+4+32+64,2+4+32+64,2+4+32+64,2+4+32+64,2+4+32+64,2+4+32+64,2+4+32+64,
+
+//Caracter boton cierre estilo ZEsarUX plus - 154
+0,60,90,102,102,90,60,0,
+
+//Caracter boton cierre estilo Risc OS - 155
+4+8+32+64,2+16+128,2+128,4+64,2+128,2+16+128,4+8+32+64,0,
+
+//Caracter boton background estilo Risc OS - 156
+0xF0,0xFC,0xC4,0xC4,0xC4,0x44,0x7C,0,
+
+//Caracter boton maximizar y restaurar estilo Risc OS - 157
+0xE0,0xA0,0xE0,0x3C,0x3C,0x3C,0x3C,0,
+
+//Cedilla 158
+0x00,0x0e,0x18,0x18,0x18,0x0e,0x04,0x08,
+
+//à a acentuada abierta - 159
+0x08,0x04,0x0e,0x03,0x0f,0x1b,0x0f,0x00,
+
+//è e acentuada abierta - 160
+0x08,0x04,0x0e,0x1b,0x1f,0x18,0x0e,0x00,
+
+//ò o acentuada abierta - 161
+0x08,0x04,0x0e,0x1b,0x1b,0x1b,0x0e,0x00,
+
+//ü u con dieresis 162
+0x1b,0x00,0x1b,0x1b,0x1b,0x1b,0x0f,0x00,
+
+//flecha abajo, para botones extender zx desktop - 163
+0x00,0x0C,0x0C,0x0C,0x0C,0x3F,0x1E,0x0C,
+//flecha arriba, para botones extender zx desktop - 164
+0x00,0x0C,0x1E,0x3F,0x0C,0x0C,0x0C,0x0C,
+//flecha derecha, para botones extender zx desktop - 165
+0x00,0x08,0x0C,0x3E,0x3E,0x0C,0x08,0x00,
+//flecha izquierda, para botones extender zx desktop - 166
+0x00,0x04,0x0C,0x1F,0x1F,0x0C,0x04,0x00,
+
+//ï i con dieresis - 167
+0x0A,0x00,0x0e,0x06,0x06,0x06,0x0f,0x00,
+
+//Á A mayúscula acento cerrado - 168
+0x02,0x04,0x0e,0x1b,0x1b,0x1f,0x1b,0x00,
 };
 
 
